--- a/misrc_tools/meson.build
+++ b/misrc_tools/meson.build
@@ -153,6 +153,7 @@ if raylib_dep.found()
     'misrc_gui/misrc_gui.c',
     'misrc_gui/gui_ui.c',
     'misrc_gui/gui_render.c',
+    'misrc_gui/gui_oscilloscope.c',
     'misrc_gui/gui_capture.c',
     'misrc_gui/gui_record.c',
     'misrc_gui/gui_extract.c',
