--- a/misrc_tools/meson.build
+++ b/misrc_tools/meson.build
@@ -156,6 +156,7 @@ if raylib_dep.found()
     'misrc_gui/gui_oscilloscope.c',
     'misrc_gui/gui_phosphor.c',
     'misrc_gui/gui_dropdown.c',
+    'misrc_gui/gui_trigger.c',
     'misrc_gui/gui_capture.c',
     'misrc_gui/gui_record.c',
     'misrc_gui/gui_extract.c',
