event based ringbuffer

--- a/misrc_tools/meson.build
+++ b/misrc_tools/meson.build
@@ -31,6 +31,7 @@ sources_capture = [
   'misrc_capture.c',
   '../misrc_common/extract.c',
   '../misrc_common/ringbuffer.c',
+  '../misrc_common/rb_event.c',
   '../misrc_common/flac_writer.c',
   '../misrc_common/frame_parser.c',
   '../misrc_common/capture_handler.c',
@@ -170,6 +171,7 @@ if raylib_dep.found()
     '../misrc_gui/clay_renderer_raylib.c',
     '../misrc_common/extract.c',
     '../misrc_common/ringbuffer.c',
+    '../misrc_common/rb_event.c',
     '../misrc_common/flac_writer.c',
     '../misrc_common/frame_parser.c',
     '../misrc_common/capture_handler.c',
