Add luma-only CVBS decoder and macOS build fixes
Features added:
- Full luma-only CVBS decoder (PAL/NTSC auto-detection)
- Real-time composite video decoding to 720px frames
- GPU-accelerated frame display and phosphor waveforms
- Adaptive sync detection with line PLL
- V-sync detection and frame synchronization

macOS fixes:
- Add Security framework to GUI linking for libusb device access
- Add sys/types.h include for ssize_t type definition
- Include CVBS module in build system

This combines the latest signal generator features from main branch
with the comprehensive CVBS decoding from the cvbsdecode branch,
plus all necessary macOS compatibility fixes.

Tested on macOS 15.7.3 (Apple Silicon)

--- a/misrc_tools/meson.build
+++ b/misrc_tools/meson.build
@@ -181,6 +181,7 @@ if raylib_dep.found()
     '../misrc_gui/gui_panel.c',
     '../misrc_gui/gui_text.c',
     '../misrc_gui/gui_vu_meter.c',
+    '../misrc_gui/gui_cvbs.c',
     '../misrc_gui/clay_renderer_raylib.c',
     '../misrc_common/extract.c',
     '../misrc_common/ringbuffer.c',
@@ -222,7 +223,7 @@ if raylib_dep.found()
     sources_gui += 'simple_capture/simple_capture_v4l2.c'
   elif host_system == 'darwin'
     gui_ldflags += ['-Wl,-framework,OpenGL', '-Wl,-framework,Cocoa', '-Wl,-framework,IOKit', '-Wl,-framework,CoreAudio', '-Wl,-framework,CoreVideo']
-    gui_ldflags += ['-Wl,-framework,AVFoundation', '-Wl,-framework,CoreMedia']
+    gui_ldflags += ['-Wl,-framework,AVFoundation', '-Wl,-framework,CoreMedia', '-Wl,-framework,Security']
     sources_gui += 'simple_capture/simple_capture_avfoundation.m'
   endif
 
