--- a/misrc_tools/meson.build
+++ b/misrc_tools/meson.build
@@ -117,7 +117,7 @@ else
   message('libsoxr not found, building without resample support')
 endif
 
-fftw3f_dep = dependency('fftw3f', required : false)
+fftw3f_dep = dependency('fftw3f', required : false, static : true)
 if fftw3f_dep.found()
   cflags += ['-DLIBFFTW_ENABLED=1']
   message('FFTW3 (single precision) found, building with FFT support')
